# PyQt6-Stylizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  prompt.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  install  pyqt6-stylizer-launcher  pyqt6-stylizer.desktop  rules
docs/: initial_user_test.md  preset_inspirations.md  public_ui_research.md  schema.md
scripts/: launch.sh
src/pyqt6_stylizer/: __init__.py  app.py  cli.py  main_window.py  models.py  reporting.py  styles.py
src/pyqt6_stylizer/canvas/: __init__.py  scene.py  view.py
src/pyqt6_stylizer/code_export/: __init__.py  generator.py
src/pyqt6_stylizer/document/: __init__.py  schema.py
src/pyqt6_stylizer/global_options/: __init__.py  panel.py
src/pyqt6_stylizer/inspector/: __init__.py  panel.py
src/pyqt6_stylizer/registry/: __init__.py  element_registry.py  preset_registry.py
tests/: test_cli.py  test_main_window.py  test_schema.py
