[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqt6-stylizer"
version = "0.1.0"
description = "A hybrid PyQt6 studio for exploring interface style, tone, and interactions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "slowtothrow", email = "slowtothrow@users.noreply.github.com" }]
keywords = ["pyqt6", "qt", "stylesheet", "ui", "desktop", "canvas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Desktop Environment",
    "Environment :: X11 Applications :: Qt",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/slowtothrow/PyQt6-Stylizer"
Repository = "https://github.com/slowtothrow/PyQt6-Stylizer"
"Bug Tracker" = "https://github.com/slowtothrow/PyQt6-Stylizer/issues"
Changelog = "https://github.com/slowtothrow/PyQt6-Stylizer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
pyqt6-stylizer = "pyqt6_stylizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = "src"
python_version = "3.12"
warn_unused_configs = true
